Fix switcher text alignment in RTL

--- a/administrator/templates/atum/scss/template-rtl.scss
+++ b/administrator/templates/atum/scss/template-rtl.scss
@@ -57,6 +57,9 @@ body {
 .switcher {
     float: right;
 }
+.form-no-margin .control-group .controls  .switcher__legend {
+    text-align: right;
+}
 // Alerts
 .notify-alerts {
   margin-left: 0;
